# retail-media-platform

./: .env.example  .gitignore  CHANGELOG.md  README.md
apps/kso_sidecar_agent/: README.md  pyproject.toml
apps/kso_sidecar_agent/config/: agent_config.json.example
apps/kso_sidecar_agent/docs/: full_audit_before_kso_runtime.md  linux_kso_runtime_filesystem_contract.md  linux_kso_stale_lock_cleanup_design.md  linux_kso_systemd_service_contract.md  pop_backend_payload_design.md  pop_backend_sender_design.md  pop_local_rotation_design.md  pop_pickup_design.md
apps/kso_sidecar_agent/kso_sidecar_agent/: __init__.py  agent_status.py  atomic_io.py  cli.py  device_auth_client.py  heartbeat_client.py  http_client.py  kso_gateway_client.py  kso_manifest_gateway_extractor.py  kso_manifest_media_sync.py  kso_safe_manifest_context.py  kso_sidecar_daemon.py  local_config.py  local_file_store.py  manifest_client.py  manifest_store.py  media_cache.py  media_cache_report_client.py  media_client.py  paths.py  player_readiness.py  pop_batch.py  pop_payload.py  (+28 more)
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/tests/: test_admin_portal_access_bootstrap.py  test_airtime_occupancy.py  test_analytics_api_f4.py  test_analytics_api_security_f4_1.py  test_analytics_delivery_aggregation_f3.py  test_analytics_normalization_f2.py  test_analytics_schemas_f1.py  test_approval_kso.py  test_approval_production_api.py  test_audit_hardening.py  test_auth_foundation.py  test_auth_models.py  test_backend15_security_regression_gate.py  test_backend_e2e_scenario_backend14.py  test_booking_write_api_backend13.py  test_business_acceptance_445.py  test_campaign_publication_batch_414.py  test_campaign_test_kso.py  test_campaigns.py  test_channel_registry_b1.py  test_creative_moderation_444.py  test_creative_preview.py  test_device_dashboard_api.py  test_device_gateway_universal_c1.py  test_device_model_unification_b2.py  test_device_registration_c2.py  test_e2e_backend_only_acceptance_436.py  test_e2e_real_business_flow_4361.py  test_emergency_api_g3.py  test_emergency_schemas_g1.py  test_emergency_security_g5.py  test_emergency_service_g2.py  test_generated_manifest_write_backend12.py  test_heartbeat_status_c3.py  test_hierarchy_kso.py  test_inventory_engine_441.py  test_kso_adapter_e1.py  test_kso_adapter_validation_e2.py  test_kso_legacy_compatibility_e4.py  test_kso_universal_preview_e3.py  (+45 more)
tools/kso_simulator/: README.md  pyproject.toml
(+820 files in other folders)
