[project]
name = "retail-media-platform"
version = "0.1.0"
description = "Multichannel retail media management platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "clickhouse-connect>=0.7.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.0.0",
    "bcrypt>=4.0.0",
    "python-jose>=3.3.0",
    "cryptography>=41.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "jinja2>=3.0.0",
    "itsdangerous>=2.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../apps/kso_player",
    "../apps/kso_sidecar_agent",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
