[project]
name = "kso-simulator"
version = "0.1.0"
description = "Local KSO software simulator for testing KSO Sidecar Agent"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
kso-sim = "kso_simulator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
